...
                    );
                  }
                }),
          ),
          SizedBox(width: 7),
          CustomButtonWidget(
            text: "GO",
            buttonWidth: 80,
            onTap: () async {
              _lastSearch = _placeController.text;

              if (_formKey.currentState.validate()) {
                AnalyticsHelper.registerInsertedPlate(_lastSearch);
...
