...
    //   "buttonText": "Let's start!",
    // }
    // {
    //   "image-light": "lesson4-white.svg",
    //   "image-dark": "lesson4-black.svg",
    //   "title": "Explore the World",
    //   "buttonText": "Let\'s start!",
    //   "description": "Engaging and fun way to discover and shop motors",
    // },
    // {
    //    "image-light": "lesson5-white.svg",
    //   "image-dark": "lesson5-black.svg",
    //   "title": "Enable Camera",
...
